--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "gulp test"
   },
   "dependencies": {
+    "connect-history-api-fallback": "0.0.4"
   },
   "devDependencies": {
     "gulp": "^3.7.0",
@@ -25,6 +26,7 @@
     "gulp-inject": "^1.0.1",
     "gulp-serve": "~0.2.0",
     "gulp-concat": "^2.2.0",
+    "gulp-replace-task": "~0.1.0",
     "rimraf": "^2.2.8",
     "gulp-sass": "^0.7.1",
     "gulp-minify-css": "~0.3.4",
