--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
   ],
   "dependencies": {
     "lodash": "2.4.1",
-    "bootstrap": "3.3.1",
+    "bootswatch-dist": "3.3.0-slate",
+    "fontawesome": "4.2.0",
     "angular": "1.3.7",
     "angular-loading-bar": "0.6.0",
     "angular-ui-router": "0.2.13",
@@ -30,6 +31,18 @@
   },
   "devDependencies": {
     "angular-mocks": "1.3.6"
+  },
+  "overrides": {
+    "fontawesome": {
+      "main": [
+        "css/font-awesome.min.css",
+        "fonts/FontAwesome.otf",
+        "fonts/fontawesome-webfont.eot",
+        "fonts/fontawesome-webfont.swg",
+        "fonts/fontawesome-webfont.ttf",
+        "fonts/fontawesome-webfont.svg"
+      ]
+    }
   },
   "resolutions": {
     "angular": "1.3.7"
